# MathViz---The-Ultimate-Math-Py-Library

./: .gitignore  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  demo.py  final_jupyter_test.ipynb  jupyter_simple.py  pyproject.toml  requirements.txt  setup.py  test_imports.py  test_mathviz.py  todo
mathviz/: __init__.py  concepts.py  core.py  examples.py  jupyter_integration.py  jupyter_simple.py  utils.py  widgets.py
notebooks/: algebra_examples.ipynb  calculus_examples.ipynb  getting_started.ipynb  test_mathviz.ipynb
tests/: test_algebra.py  test_calculus.py  test_core.py  test_integration.py  test_linalg.py  test_stats.py
