[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathviz"
version = "0.1.0"
description = "Interactive mathematical visualization library for education and exploration"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "HORRIDBEAST", email = "mathviz@example.com" }
]
keywords = ["mathematics", "visualization", "education", "calculus", "algebra", "interactive", "plotting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Education",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "sympy>=1.9.0",
    "mplcursors>=0.5.0",
]

[project.optional-dependencies]
jupyter = ["ipywidgets>=7.6.0", "jupyter>=1.0.0"]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
test = ["pytest>=6.0.0", "pytest-cov>=2.0.0"]

[project.urls]
"Homepage" = "https://github.com/HORRIDBEAST/MathViz---The-Ultimate-Math-Py-Library"
"Bug Tracker" = "https://github.com/HORRIDBEAST/MathViz---The-Ultimate-Math-Py-Library/issues"
"Source Code" = "https://github.com/HORRIDBEAST/MathViz---The-Ultimate-Math-Py-Library"

[tool.setuptools.packages.find]
where = ["."]
include = ["mathviz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
